fix: Go To Top button dark mode.

--- a/SRC/css.scss
+++ b/SRC/css.scss
@@ -1,7 +1,7 @@
 // ==== Gloabal Variable ===============================================================================================
 
 :root {
-  --color-background: initial;
+  --color-background: #ffffff;
   --color-border: #808080;
   --color-font: #202020;
 }
